--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
-    "description": "",
+    "description": "FalconFrame language middleware for multi-language support",
     "repository": {
         "type": "git",
         "url": "https://github.com/wxn0brP/FalconFrame-lang.git"
@@ -13,10 +13,16 @@
     "license": "MIT",
     "type": "module",
     "scripts": {
-        "build": "tsc && tsc-alias",
-        "start": "node dist/index.js",
-        "bun": "bun run src/index.ts"
+        "build": "tsc && tsc-alias"
     },
+    "keywords": [
+        "falcon-frame",
+        "i18n",
+        "localization",
+        "translation",
+        "lang",
+        "language"
+    ],
     "devDependencies": {
         "@types/node": "*",
         "@wxn0brp/ac": "^0.0.2",
