--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/node": "*",
         "@wxn0brp/ac": "^0.0.3",
         "@wxn0brp/falcon-frame": "^0.5.3",
+        "tsc-alias": "*",
         "typescript": "*"
     },
     "peerDependencies": {
